--- a/style.css
+++ b/style.css
@@ -1,56 +1,104 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Protest+Strike&family=Roboto+Slab:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Protest+Strike&family=Roboto+Slab:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 * {
     margin:0;
     padding: 0;
     box-sizing: border-box;
 }
-.navbar-layer{
-    background-color:#b68ff5;
-    height: 66px;    
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    font-family: Josefin Sans;
-    color: Black;
-    letter-spacing: 8px;
-    position: fixed;
-    width: 100%;
-    z-index: 10;
-}
-
-li:hover{
-    background-color:#dcd6f5;
-    opacity: 0.4;
-}
-#github{
-    background-color: white;
-    border-radius: 15px;
-}
-
-.navbar-container ul{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #dcd6f5;
-    height: 50px;
-    border-radius: 7px;
-    border-top: 2px solid white;
+body{
+    
     font-family: Montserrat;
-    position: fixed;
+    color: black;
+}
+.navbar-layer{
+    background-color:#081224;
+    height: 100px;    
+    display: flex;
+    align-items: center;
+    font-family:  Roboto Slab;
+    color: white;
+    font-size: 16px;
+    letter-spacing: 8px;
     width: 100%;
-    margin-top: 66px;
-    z-index: 5;
+    padding-left: 5%;
+    
+}
+
+.navbar-layer h1{
+    font-family: Roboto Slab;
+    font-size: 30px;
+    color: white;
+    letter-spacing: 5px;
+    padding-left: 5%;
+}
+
+.navbar-layer ul{
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    list-style: none;
+    padding-left: 20%;
+    
 }
 a:link{
     text-decoration: none;
-    color: black;
+    color: white;
+    font-size: 17px;
+    font-family: Montserrat;
     list-style: none;
 }
-
+a:hover{
+   opacity: 0.4;
+}
+a:visited{
+    text-decoration: none;
+    color: white;
+    font-size: 17px;
+    font-family: Montserrat;
+    list-style: none;
+}
 a:active{
-    color:  #dcd6f5;
+    text-decoration: none;
+    color: rgb(46, 236, 217);
+    font-size: 17px;
+    font-family: Montserrat;
+    list-style: none;
+    opacity: 1;
+}
+.main-layer{
+    background-color: #162b4e;
+    align-items: center ;
+    display: flex;
+    height: 500px;
+   
+}
+.main-layer h1{
+    font-family:   lato;
+    font-size: 38px;
+    color: rgb(46, 236, 217);
+   padding-left: 5%;
+    padding-bottom: 2%;
+    
+}
+.main-layer p{
+    font-family: Montserrat;
+    font-size: 17px;
+    color: white;
+    width: 80%;
+    padding-left: 6%;
+    
+}
+.img-layer{
+   padding-right: 7%;
+   padding-top: 5%;
+   padding-bottom: 5%;
+}
+#image-layer{
+  height: 250px;
+    width: 250px;
 }
