--- a/main/app/style.css
+++ b/main/app/style.css
@@ -15,6 +15,21 @@ body{
     font-family: Montserrat;
     color: black;
 }
+
+::-webkit-scrollbar {
+    width: 12px; 
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(8, 112, 112, 0.7); 
+    border-radius: 10px; 
+}
+
+::-webkit-scrollbar-track {
+    background: rgba(8, 18, 36, 0.5); 
+}
+
+
 .navbar-layer{
     background-color:#081224;
     height: 100px;    
@@ -26,7 +41,12 @@ body{
     letter-spacing: 8px;
     width: 100%;
     padding-left: 5%;
-    
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    background-color: rgba(8, 18, 36, 0.8); /* Cor de fundo com transparência */
+    backdrop-filter: blur(5px); /* Adiciona o efeito de blur */
+    transition: background-color 0.3s, backdrop-filter 0.3s; /* Transição suave */
 }
 
 .navbar-layer h1{
@@ -102,54 +122,55 @@ a:active{
   height: 250px;
     width: 250px;
 }
-.footer-layer2{
-display: flex;
-align-items: center;
-justify-content: space-evenly;
-background:linear-gradient(90deg, rgba(8, 18, 36, 1) 0%, rgb(16, 38, 80) 50%, rgb(26, 57, 116) 100%);
-height: 400px;  
-font-size: 10px;
-
-
-
+:root {
+    --primary-color: rgb(46, 236, 217);
+    --background-dark: rgba(8, 18, 36, 1);
+    --background-light: rgba(8, 18, 36, 0.8);
+    --font-color: white;
 }
-.foot1{
+
+.footer-layer1, .footer-layer2 {
+    background: linear-gradient(90deg, var(--background-dark) 0%, rgb(16, 38, 80) 50%, rgb(26, 57, 116) 100%);
+    padding: 20px;
+}
+.footer-layer2{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.foot1 {
     height: 300px;
     width: 20.3%;
-    background-color: none;
     display: flex;
     flex-direction: column;
-   padding-top: 30px;
+    padding: 20px; 
+    margin: 10px; 
     border-radius: 20px;
-    margin-bottom: 20px;
-    font-size: 11px;
-    box-shadow: -4px 4px 4px 2px rgba(0, 0, 0, 0.2);
-    color: white;
-    padding-left: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); 
+    color: var(--font-color);
     align-items: center;
-    
-
-  
+    transition: transform 0.4s, box-shadow 0.4s; 
 }
 
-.footer-layer1 h1{
-    color: rgb(46, 236, 217);
+.foot1:hover {
+    transform: scale(1.05); 
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); 
+}
+
+.footer-layer1 h1 {
+    color: var(--primary-color);
     font-family: Montserrat;
     font-size: 30px;
     letter-spacing: 2px;
-    display: flex;
-    justify-content: center;
-    background:linear-gradient(90deg, rgba(8, 18, 36, 1) 0%, rgb(16, 38, 80) 50%, rgb(26, 57, 116) 100%);
+    margin-bottom: 10px; 
+    text-align: center; 
 }
-#foot-text,#foot-text1,#foot-text2{
+
+#foot-text, #foot-text1, #foot-text2 {
     font-size: 14px;
-    padding-left: 15px;
-    padding-top: 10px;
-}
-.foot1{
-    transition: .4s;
-    position: relative;
-}
-.foot1:hover{
-    transform: scale(1.1);
+    padding: 5px 0; 
+    text-align: center;
 }
