--- a/main/app/style.css
+++ b/main/app/style.css
@@ -27,12 +27,12 @@ body{
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: rgba(8, 112, 112, 0.7); 
+    background-color: rgba(10, 194, 194, 0.993); 
     border-radius: 10px; 
 }
 
 ::-webkit-scrollbar-track {
-    background: rgba(8, 18, 36, 0.5); 
+    background: rgb(8, 18, 36); 
 }
 
 
