--- a/main/app/modules/style-modules1.css
+++ b/main/app/modules/style-modules1.css
@@ -32,6 +32,9 @@
 }
 
 .mod-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding-top: 3%;
     padding-left: 2%;
     height: 100%;
